--- a/header.html
+++ b/header.html
@@ -23,10 +23,10 @@
                       <a class="nav-link" href="contact.html">Catálogo</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="home_user.html">Perfil</a>
+                      <a class="nav-link" href="home_user.html">Admin</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="ponto_coleta.html">Pontos de coleta</a>
+                      <a class="nav-link" href="ponto_coleta.html">MONITORAMENTO</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="chatbot.html">Assistente virtual</a>
