ajustado link da api

--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,7 @@
         return;
       }
 
-      axios.post('http://localhost/ciclovida/api_php/item.php', {
+      axios.post('https://ciclovida.ki6.com.br/ciclovida/api_php/item.php', {
         acao: 'solicitar',
         id_user: idUser,
         id_item: currentItem.id,
