mudando visual do chatbot

--- a/chatbot.html
+++ b/chatbot.html
@@ -93,7 +93,7 @@
               </div>
               <div class="detail-box">
                 <h4>O que é o ciclo vida?</h4>
-                <p>Você pode perguntar a nossa assistente qualquer informação relacionada a criação e motivação do projeto, além de ter informações sobre a problemática que queremos combater.</p>            
+                <p>Pergunte à assistente sobre a criação, motivação do projeto e a problemática que buscamos resolver.</p>            
               </div>
             </div>
           </div>
@@ -103,8 +103,8 @@
                 <img src="images/pensativos.jpg" alt="Eye Care" style="width: 200px; margin-left: 25px;" >
               </div>
               <div class="detail-box">
-                <h4>Como posso participar desse ciclo?</h4>
-                <p>Tem dúvidas sobre como criar pontos de coleta ou como pode ajudar um ponto existente? Tenha todas as respostas aqui.</p>
+                <h4>Como usar o sistema?</h4>
+                <p>Tem dúvidas sobre como usar a plataforma? Tenha todas as respostas aqui.</p>
               </div>
             </div>
           </div>
@@ -114,8 +114,8 @@
                 <img src="images/chef.jpg" alt="Pediatrician Clinic"style="width: 200px;" >
               </div>
               <div class="detail-box">
-                <h4>Tenho alimentos quase vencendo e não posso doar. O que faço?</h4>
-                <p>Não se preocupe, nossa assistente pode criar receitas fáceis e práticas para você fazer no dia a dia e evitar que esse alimento se estrague.</p>
+                <h4>Motivos de uso?</h4>
+                <p>Analise com detalhes o que faz o uso da plataforma ser indispensável para garantir agilidade e segurança no fluxo.</p>
               </div>
             </div>
           </div>
@@ -137,10 +137,10 @@
 
         <!-- Quick Questions -->
         <div class="quick-questions d-flex flex-wrap justify-content-center mb-3">
-          <button class="btn btn-teal m-2" data-message="Integração logística">Integração logística</button>
-          <button class="btn btn-teal m-2" data-message="Doação segura">Doação segura</button>
-          <button class="btn btn-teal m-2" data-message="Destinação correta">Destinação correta</button>
-          <button class="btn btn-teal m-2" data-message="Engajamento comunitário">Engajamento comunitário</button>
+          <button class="btn btn-teal m-2" data-message="O que é o SEAU?">O que é o SEAU?</button>
+          <button class="btn btn-teal m-2" data-message="Onde estão localizadas as bombonas?">Onde estão localizadas as bombonas?</button>
+          <button class="btn btn-teal m-2" data-message="O que cada cor no mapa significa?">O que cada cor no mapa significa?</button>
+          <button class="btn btn-teal m-2" data-message="Quais tipos de usuários existem no sistema?">Quais tipos de usuários existem no sistema?</button>
         </div>
 
         <!-- Chat Input -->
